deploy/example-fedora.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-fedora
  labels:
    app: example-fedora-app
  namespace: default
spec:
  containers:
    - name: example-fedora
      image: fedora:30
      ports:
        - containerPort: 8080
      command: ["python3"]
      args: [ "-m", "http.server", "8080"]
  runtimeClassName: kata-oc
