deploy/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kata-operator
  namespace: kata-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kata-operator
  template:
    metadata:
      labels:
        name: kata-operator
    spec:
      serviceAccountName: kata-operator
      nodeSelector:
        node-role.kubernetes.io/master: ""
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 120
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 120
      - effect: NoSchedule
        key: node.kubernetes.io/memory-pressure
        operator: Exists
      containers:
        - name: kata-operator
          # Replace this with the built image name
          image: quay.io/harpatil/kata-operator:0.1 
          command:
          - kata-operator
          imagePullPolicy: Always
