deploy/example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  selector:
    app: example-fedora-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
