deploy/example-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: example
spec:
  host: example.apps-crc.testing
  path: "/" 
  to:
    kind: Service
    name: example-service
